dev: Update locales

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -78,6 +78,11 @@
   "components.file-input.index.tooBig": "The selected file is too large",
   "components.file-input.index.remove": "Remove",
   "components.footer.index.footer": "You are the network. Let's build this thing together.",
+  "components.form.field.tooltip.descriptionTitle": "What is this?",
+  "components.form.field.tooltip.locationTitle": "What should I enter here?",
+  "components.form.field.tooltip.absenceTitle": "What if I cannot find the correct value?",
+  "components.form.field.tooltip.viewGlossaryPage": "View glossary page",
+  "components.form.field.tooltip.additionalInfo": "Additional information",
   "components.form.section.index.expand": "Expand section",
   "components.form.section.index.collapse": "Collapse section",
   "components.input.generate.generate": "Generate",
@@ -177,10 +182,8 @@
   "console.components.mac-settings-section.index.resetWarning": "Resetting is insecure and makes your device susceptible for replay attacks",
   "console.components.mac-settings-section.index.resetsFCnt": "Resets Frame Counters",
   "console.components.mac-settings-section.index.rx1DataRateOffsetTitle": "RX1 Data Rate Offset",
-  "console.components.mac-settings-section.index.rx1DataRateOffsetDescription": "Offset  between  the  uplink  data  rate  and  the  downlink  data rate  used  to  communicate  with  the  end-device  on  the  first  reception  slot  (RX1)",
   "console.components.mac-settings-section.index.rx1DelayDescription": "Class A RX1 delay in seconds. RX2 delay is RX1 delay + 1 second.",
   "console.components.mac-settings-section.index.rx1DelayTitle": "RX1 Delay",
-  "console.components.mac-settings-section.index.rx2DataDateIndexDescription": "The default RX2 data rate index value the device uses after a reset",
   "console.components.mac-settings-section.index.rx2DataRateIndexTitle": "RX2 Data Rate Index",
   "console.components.mac-settings-section.index.rx2FrequencyDescription": "Frequency for RX2 (Hz)",
   "console.components.mac-settings-section.index.rx2FrequencyTitle": "RX2 Frequency",
@@ -300,7 +303,6 @@
   "console.containers.device-title-section.device-title-section.lastSeenUnavailable": "Last seen info unavailable",
   "console.containers.freq-plans-select.index.title": "Frequency plan",
   "console.containers.freq-plans-select.index.warning": "Frequency plans unavailable",
-  "console.containers.freq-plans-select.index.description": "The frequency plan used by the end device",
   "console.containers.freq-plans-select.index.none": "Do not set a frequency plan",
   "console.containers.gateway-location-form.gateway-location-form.locationDescription": "The location of this gateway may be publicly displayed",
   "console.containers.gateway-location-form.gateway-location-form.updateLocationFromStatus": "Update from status messages",
@@ -548,6 +550,42 @@
   "lib.errors.status-code-messages.503": "Service unavailable",
   "lib.errors.status-code-messages.504": "Gateway timeout",
   "lib.errors.status-code-messages.520": "Unknown error",
+  "lib.field-description-messages.freqPlanDescription": "A Frequency Plan defines data rates and channels which comply with the LoRaWAN Regional Parameters for a band or geographical area.",
+  "lib.field-description-messages.freqPlanLocation": "You need to choose a Frequency Plan which adheres to the local regulations of where your end device is located. It is also important that the gateways in reach of this end device use the same Frequency Plan.",
+  "lib.field-description-messages.devEuiDescription": "A 64 bit extended unique identifier for your end device.",
+  "lib.field-description-messages.devEuiLocation": "It should be provided to you by the manufacturer, or printed on the end device packaging.",
+  "lib.field-description-messages.devEuiAbsence": "Contact the manufacturer or your reseller.",
+  "lib.field-description-messages.joinEuiDescription": "The JoinEUI (formerly called AppEUI) is a 64 bit extended unique identifier used to identify the Join Server during activation.",
+  "lib.field-description-messages.joinEuiLocation": "It should be provided by the end device manufacturer for pre-provisioned end devices, or by the owner of the Join Server you will use.",
+  "lib.field-description-messages.joinEuiAbsence": "Contact the manufacturer or your reseller. If they can not provide a JoinEUI, and your end device is programmable, it is okay to use all-zeros, but ensure that you use the same JoinEUI in your device as you enter in The Things Stack.",
+  "lib.field-description-messages.appKeyDescription": "An end device specific encryption key used during OTAA to derive the AppSKey (in LoRaWAN 1.1x) or both the NwkSKey and AppSKey in LoRaWAN 1.0x.",
+  "lib.field-description-messages.appKeyLocation": "It is usually pre-provisioned by the end device manufacturer, but can also be created by the user.",
+  "lib.field-description-messages.appKeyAbsence": "Contact the manufacturer or your reseller. If they cannot provide an AppKey, and your end device is programmable, it is okay to generate one.",
+  "lib.field-description-messages.nwkKeyDescription": "A device specific encryption key used to derive the FNwkSIntKey, SNwkSIntKey, NwkSEncKey in LoRaWAN 1.1. When a LoRaWAN 1.1 capable device connects to a LoRaWAN 1.0x Network Server which does not support dual root keys (NwkKey and AppKey), the NwkKey value is used as the AppKey value.",
+  "lib.field-description-messages.nwkKeyLocation": "It is usually pre-provisioned by the end device manufacturer, but some end devices also allow using a user-defined value.",
+  "lib.field-description-messages.nwkKeyAbsence": "Contact the manufacturer or your reseller. If they cannot provide an AppKey, and your end device is programmable, it is okay to generate one.",
+  "lib.field-description-messages.devIdDescription": "A unique, human-readable identifier for your end device.",
+  "lib.field-description-messages.devIdLocation": "You can make it up, so be creative. End device IDs can not be reused by multiple end devices within the same application.",
+  "lib.field-description-messages.joinServerDescription": "The Join Server's role is to store root keys, generate session keys, and to send those securely to the Network Server and Application Server of choice. The device contains the same root keys, which can be provisioned as part of assembly, distribution or upon installation.",
+  "lib.field-description-messages.joinServerLocation": "Contact your manufacturer or reseller to find out if your end device is pre-provisioned on an external Join Server. If not, you may use the local Join Server, or provision the end device on our Global Join Server so that you can transfer it without lock-in.",
+  "lib.field-description-messages.joinServerAbsence": "If the end device is pre-provisioned, you will need the keys from the manufacturer to activate it.",
+  "lib.field-description-messages.devAddrDescription": "A 32 bit non-unique identifier, assigned by the Network Server during end device activation.",
+  "lib.field-description-messages.devAddrLocation": "For Activation-By-Personalization (ABP), you must generate a device address and manually program it into the end device. You can use the generate button next to the input field to generate a device address.",
+  "lib.field-description-messages.appSKeyDescription": "After activation, this encryption key is used to secure messages which carry a payload.",
+  "lib.field-description-messages.appSKeyLocation": "For Activation-By-Personalization (ABP), you must generate a key and manually program it into your end device. You can use the generate button next to the input field to generate a key.",
+  "lib.field-description-messages.nwkSKeyDescription": "After activation, this encryption key is used to secure messages which do not carry a payload.",
+  "lib.field-description-messages.nwkSKeyLocation": "For OTAA, it is created by the Network Server. If using ABP, you must create one and manually enter it in the end device and The Things Stack.",
+  "lib.field-description-messages.lwVersionDescription": "The LoRa Alliance LoRaWAN specification your end device conforms to, which defines which Media Access Control (MAC) features it supports.",
+  "lib.field-description-messages.lwVersionLocation": "The LoRaWAN version for your end device should be provided by the manufacturer in a datasheet as LoRaWAN version or LoRaWAN specification",
+  "lib.field-description-messages.lwVersionAbsence": "Contact your manufacturer or reseller, since specifying the wrong version can lead to complex issues when the Network Server provides the end device with unsupported configuration (MAC) commands.",
+  "lib.field-description-messages.regParameterDescription": "The Regional Parameters specify frequency, dwell time, and other communication settings for different geographical areas. The Regional Parameters version is the version of the LoRa Alliance specification which your device supports.",
+  "lib.field-description-messages.regParameterLocation": "The Regional Parameters version should be provided by the end device manufacturer in a datasheet.",
+  "lib.field-description-messages.regParameterAbsence": "Contact your manufacturer or reseller to obtain the correct specification. Specifying a wrong version can lead to complex issues when the Network Server provides the end device with unsupported configuration (MAC) commands.",
+  "lib.field-description-messages.classDescription": "The LoRaWAN specification defines three end device types. All LoRaWAN end devices must implement Class A, whereas Class B and Class C are extensions to the specification of Class A devices that specify different downlink reception behavior.",
+  "lib.field-description-messages.classLocation": "The class capabilities of your end device should be provided by the manufaturer in a datasheet.",
+  "lib.field-description-messages.classAbsence": "If your end device will not receive downlink messages, you can safely use Class A, which all LoRaWAN certified devices must implement. Otherwise contact your manufacturer or reseller.",
+  "lib.field-description-messages.rx1DataRateOffsetDescription": "The Data Rate Offset sets the offset between the uplink data rate and the downlink data rate used to communicate with the End Device during the first reception slot (RX1).",
+  "lib.field-description-messages.dataRateIndexDescription": "The Data Rate Index specifies which data rate downlink communications will use, as given in the Regional Parameters.",
   "lib.shared-messages.16Bit": "16 bit",
   "lib.shared-messages.32Bit": "32 bit",
   "lib.shared-messages.abp": "Activation by personalization (ABP)",
@@ -582,14 +620,11 @@
   "lib.shared-messages.appEUIDescription": "The AppEUI uniquely identifies the owner of the end device. If no AppEUI is provided by the device manufacturer (usually for development), it can be filled with zeros.",
   "lib.shared-messages.appId": "Application ID",
   "lib.shared-messages.appKey": "AppKey",
-  "lib.shared-messages.appKeyDescription": "The root key to derive session keys to secure communication between the end device and the application",
-  "lib.shared-messages.appKeyNewDescription": "The root key to derive the application session key to secure communication between the end device and the application",
   "lib.shared-messages.application": "Application",
   "lib.shared-messages.applications": "Applications",
   "lib.shared-messages.applicationServerAddress": "Application Server address",
   "lib.shared-messages.approve": "Approve",
   "lib.shared-messages.appSKey": "AppSKey",
-  "lib.shared-messages.appSKeyDescription": "Application session key",
   "lib.shared-messages.asServerID": "Application Server ID",
   "lib.shared-messages.asServerIDDescription": "The AS-ID of the Application Server to use",
   "lib.shared-messages.asServerKekLabel": "Application Server KEK label",
@@ -644,11 +679,9 @@
   "lib.shared-messages.devAddr": "Device address",
   "lib.shared-messages.devDesc": "End device description",
   "lib.shared-messages.devEUI": "DevEUI",
-  "lib.shared-messages.deviceAddrDescription": "Device address, issued by the Network Server or chosen by device manufacturer in case of testing range",
   "lib.shared-messages.deviceCounted": "{count, plural, one {End device} other {End devices}}",
   "lib.shared-messages.deviceDescDescription": "Optional end device description; can also be used to save notes about the end device",
   "lib.shared-messages.deviceDescPlaceholder": "Description for my new end device",
-  "lib.shared-messages.deviceEUIDescription": "The DevEUI is the unique identifier for this end device",
   "lib.shared-messages.deviceIdPlaceholder": "my-new-device",
   "lib.shared-messages.deviceNamePlaceholder": "My new end device",
   "lib.shared-messages.device": "End device",
@@ -684,7 +717,6 @@
   "lib.shared-messages.fetching": "Fetching data…",
   "lib.shared-messages.firmwareVersion": "Firmware version",
   "lib.shared-messages.fNwkSIntKey": "FNwkSIntKey",
-  "lib.shared-messages.fNwkSIntKeyDescription": "Forwarding network session integrity key",
   "lib.shared-messages.frameCounterWidth": "Frame counter width",
   "lib.shared-messages.frequencyPlan": "Frequency plan",
   "lib.shared-messages.frequencyPlanWarning": "Without choosing a frequency plan, packets from the gateway will not be correctly processed",
@@ -722,7 +754,6 @@
   "lib.shared-messages.insufficientAppKeyRights": "Insufficient rights to set an AppKey",
   "lib.shared-messages.insufficientNwkKeyRights": "Insufficient rights to set a NwkKey",
   "lib.shared-messages.joinEUI": "JoinEUI",
-  "lib.shared-messages.joinEUIDescription": "The JoinEUI identifies the Join Server. If no JoinEUI is provided by the device manufacturer (usually for development), it can be filled with zeros.",
   "lib.shared-messages.joinServerAddress": "Join Server address",
   "lib.shared-messages.key": "key",
   "lib.shared-messages.keyEdit": "Edit API key",
@@ -747,7 +778,6 @@
   "lib.shared-messages.lorawanOptions": "LoRaWAN options",
   "lib.shared-messages.lorawanPhyVersionDescription": "The LoRaWAN PHY version of the end device",
   "lib.shared-messages.macVersion": "LoRaWAN version",
-  "lib.shared-messages.macVersionDescription": "The LoRaWAN version (MAC), as provided by the device manufacturer",
   "lib.shared-messages.messaging": "Messaging",
   "lib.shared-messages.messageTypes": "Message types",
   "lib.shared-messages.milliseconds": "milliseconds",
@@ -772,11 +802,9 @@
   "lib.shared-messages.nsServerKekLabel": "Network Server KEK label",
   "lib.shared-messages.nsServerKekLabelDescription": "The KEK label of the Network Server to use for wrapping the network session key",
   "lib.shared-messages.nwkKey": "NwkKey",
-  "lib.shared-messages.nwkKeyDescription": "The root key to derive network session keys to secure communication between the end device and the network",
   "lib.shared-messages.nwkSEncKey": "NwkSEncKey",
   "lib.shared-messages.nwkSEncKeyDescription": "Network session encryption key",
   "lib.shared-messages.nwkSKey": "NwkSKey",
-  "lib.shared-messages.nwkSKeyDescription": "Network session key",
   "lib.shared-messages.offline": "Offline",
   "lib.shared-messages.ok": "Ok",
   "lib.shared-messages.online": "Online",
