--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -78,6 +78,11 @@
   "components.file-input.index.tooBig": "Xxx xxxxxxxx xxxx xx xxx xxxxx",
   "components.file-input.index.remove": "Xxxxxx",
   "components.footer.index.footer": "Xxx xxx xxx xxxxxxx. Xxx'x xxxxx xxxx xxxxx xxxxxxxx.",
+  "components.form.field.tooltip.descriptionTitle": "Xxxx xx xxxx?",
+  "components.form.field.tooltip.locationTitle": "Xxxx xxxxxx X xxxxx xxxx?",
+  "components.form.field.tooltip.absenceTitle": "Xxxx xx X xxxxxx xxxx xxx xxxxxxx xxxxx?",
+  "components.form.field.tooltip.viewGlossaryPage": "Xxxx xxxxxxxx xxxx",
+  "components.form.field.tooltip.additionalInfo": "Xxxxxxxxxx xxxxxxxxxxx",
   "components.form.section.index.expand": "Xxxxxx xxxxxxx",
   "components.form.section.index.collapse": "Xxxxxxxx xxxxxxx",
   "components.input.generate.generate": "Xxxxxxxx",
@@ -177,10 +182,8 @@
   "console.components.mac-settings-section.index.resetWarning": "Xxxxxxxxx xx xxxxxxxx xxx xxxxx xxxx xxxxxx xxxxxxxxxxx xxx xxxxxx xxxxxxx",
   "console.components.mac-settings-section.index.resetsFCnt": "Xxxxxx Xxxxx Xxxxxxxx",
   "console.components.mac-settings-section.index.rx1DataRateOffsetTitle": "XXx Xxxx Xxxx Xxxxxx",
-  "console.components.mac-settings-section.index.rx1DataRateOffsetDescription": "Xxxxxx  xxxxxxx  xxx  xxxxxx  xxxx  xxxx  xxx  xxx  xxxxxxxx  xxxx xxxx  xxxx  xx  xxxxxxxxxxx  xxxx  xxx  xxx-xxxxxx  xx  xxx  xxxxx  xxxxxxxxx  xxxx  (XXx)",
   "console.components.mac-settings-section.index.rx1DelayDescription": "Xxxxx X XXx xxxxx xx xxxxxxx. XXx xxxxx xx XXx xxxxx + x xxxxxx.",
   "console.components.mac-settings-section.index.rx1DelayTitle": "XXx Xxxxx",
-  "console.components.mac-settings-section.index.rx2DataDateIndexDescription": "Xxx xxxxxxx XXx xxxx xxxx xxxxx xxxxx xxx xxxxxx xxxx xxxxx x xxxxx",
   "console.components.mac-settings-section.index.rx2DataRateIndexTitle": "XXx Xxxx Xxxx Xxxxx",
   "console.components.mac-settings-section.index.rx2FrequencyDescription": "Xxxxxxxxx xxx XXx (Xx)",
   "console.components.mac-settings-section.index.rx2FrequencyTitle": "XXx Xxxxxxxxx",
@@ -300,7 +303,6 @@
   "console.containers.device-title-section.device-title-section.lastSeenUnavailable": "Xxxx xxxx xxxx xxxxxxxxxxx",
   "console.containers.freq-plans-select.index.title": "Xxxxxxxxx xxxx",
   "console.containers.freq-plans-select.index.warning": "Xxxxxxxxx xxxxx xxxxxxxxxxx",
-  "console.containers.freq-plans-select.index.description": "Xxx xxxxxxxxx xxxx xxxx xx xxx xxx xxxxxx",
   "console.containers.freq-plans-select.index.none": "Xx xxx xxx x xxxxxxxxx xxxx",
   "console.containers.gateway-location-form.gateway-location-form.locationDescription": "Xxx xxxxxxxx xx xxxx xxxxxxx xxx xx xxxxxxxx xxxxxxxxx",
   "console.containers.gateway-location-form.gateway-location-form.updateLocationFromStatus": "Xxxxxx xxxx xxxxxx xxxxxxxx",
@@ -548,6 +550,42 @@
   "lib.errors.status-code-messages.503": "Xxxxxxx xxxxxxxxxxx",
   "lib.errors.status-code-messages.504": "Xxxxxxx xxxxxxx",
   "lib.errors.status-code-messages.520": "Xxxxxxx xxxxx",
+  "lib.field-description-messages.freqPlanDescription": "X Xxxxxxxxx Xxxx xxxxxxx xxxx xxxxx xxx xxxxxxxx xxxxx xxxxxx xxxx xxx XxXxXXX Xxxxxxxx Xxxxxxxxxx xxx x xxxx xx xxxxxxxxxxxx xxxx.",
+  "lib.field-description-messages.freqPlanLocation": "Xxx xxxx xx xxxxxx x Xxxxxxxxx Xxxx xxxxx xxxxxxx xx xxx xxxxx xxxxxxxxxxx xx xxxxx xxxx xxx xxxxxx xx xxxxxxx. Xx xx xxxx xxxxxxxxx xxxx xxx xxxxxxxx xx xxxxx xx xxxx xxx xxxxxx xxx xxx xxxx Xxxxxxxxx Xxxx.",
+  "lib.field-description-messages.devEuiDescription": "X xx xxx xxxxxxxx xxxxxx xxxxxxxxxx xxx xxxx xxx xxxxxx.",
+  "lib.field-description-messages.devEuiLocation": "Xx xxxxxx xx xxxxxxxx xx xxx xx xxx xxxxxxxxxxxx, xx xxxxxxx xx xxx xxx xxxxxx xxxxxxxxx.",
+  "lib.field-description-messages.devEuiAbsence": "Xxxxxxx xxx xxxxxxxxxxxx xx xxxx xxxxxxxx.",
+  "lib.field-description-messages.joinEuiDescription": "Xxx XxxxXXX (xxxxxxxx xxxxxx XxxXXX) xx x xx xxx xxxxxxxx xxxxxx xxxxxxxxxx xxxx xx xxxxxxxx xxx Xxxx Xxxxxx xxxxxx xxxxxxxxxx.",
+  "lib.field-description-messages.joinEuiLocation": "Xx xxxxxx xx xxxxxxxx xx xxx xxx xxxxxx xxxxxxxxxxxx xxx xxx-xxxxxxxxxxx xxx xxxxxxx, xx xx xxx xxxxx xx xxx Xxxx Xxxxxx xxx xxxx xxx.",
+  "lib.field-description-messages.joinEuiAbsence": "Xxxxxxx xxx xxxxxxxxxxxx xx xxxx xxxxxxxx. Xx xxxx xxx xxx xxxxxxx x XxxxXXX, xxx xxxx xxx xxxxxx xx xxxxxxxxxxxx, xx xx xxxx xx xxx xxx-xxxxx, xxx xxxxxx xxxx xxx xxx xxx xxxx XxxxXXX xx xxxx xxxxxx xx xxx xxxxx xx Xxx Xxxxxx Xxxxx.",
+  "lib.field-description-messages.appKeyDescription": "Xx xxx xxxxxx xxxxxxxx xxxxxxxxxx xxx xxxx xxxxxx XXXX xx xxxxxx xxx XxxXXxx (xx XxXxXXX x.xx) xx xxxx xxx XxxXXxx xxx XxxXXxx xx XxXxXXX x.xx.",
+  "lib.field-description-messages.appKeyLocation": "Xx xx xxxxxxx xxx-xxxxxxxxxxx xx xxx xxx xxxxxx xxxxxxxxxxxx, xxx xxx xxxx xx xxxxxxx xx xxx xxxx.",
+  "lib.field-description-messages.appKeyAbsence": "Xxxxxxx xxx xxxxxxxxxxxx xx xxxx xxxxxxxx. Xx xxxx xxxxxx xxxxxxx xx XxxXxx, xxx xxxx xxx xxxxxx xx xxxxxxxxxxxx, xx xx xxxx xx xxxxxxxx xxx.",
+  "lib.field-description-messages.nwkKeyDescription": "X xxxxxx xxxxxxxx xxxxxxxxxx xxx xxxx xx xxxxxx xxx XXxxXXxxXxx, XXxxXXxxXxx, XxxXXxxXxx xx XxXxXXX x.x. Xxxx x XxXxXXX x.x xxxxxxx xxxxxx xxxxxxxx xx x XxXxXXX x.xx Xxxxxxx Xxxxxx xxxxx xxxx xxx xxxxxxx xxxx xxxx xxxx (XxxXxx xxx XxxXxx), xxx XxxXxx xxxxx xx xxxx xx xxx XxxXxx xxxxx.",
+  "lib.field-description-messages.nwkKeyLocation": "Xx xx xxxxxxx xxx-xxxxxxxxxxx xx xxx xxx xxxxxx xxxxxxxxxxxx, xxx xxxx xxx xxxxxxx xxxx xxxxx xxxxx x xxxx-xxxxxxx xxxxx.",
+  "lib.field-description-messages.nwkKeyAbsence": "Xxxxxxx xxx xxxxxxxxxxxx xx xxxx xxxxxxxx. Xx xxxx xxxxxx xxxxxxx xx XxxXxx, xxx xxxx xxx xxxxxx xx xxxxxxxxxxxx, xx xx xxxx xx xxxxxxxx xxx.",
+  "lib.field-description-messages.devIdDescription": "X xxxxxx, xxxxx-xxxxxxxx xxxxxxxxxx xxx xxxx xxx xxxxxx.",
+  "lib.field-description-messages.devIdLocation": "Xxx xxx xxxx xx xx, xx xx xxxxxxxx. Xxx xxxxxx XXx xxx xxx xx xxxxxx xx xxxxxxxx xxx xxxxxxx xxxxxx xxx xxxx xxxxxxxxxxx.",
+  "lib.field-description-messages.joinServerDescription": "Xxx Xxxx Xxxxxx'x xxxx xx xx xxxxx xxxx xxxx, xxxxxxxx xxxxxxx xxxx, xxx xx xxxx xxxxx xxxxxxxx xx xxx Xxxxxxx Xxxxxx xxx Xxxxxxxxxxx Xxxxxx xx xxxxxx. Xxx xxxxxx xxxxxxxx xxx xxxx xxxx xxxx, xxxxx xxx xx xxxxxxxxxxx xx xxxx xx xxxxxxxx, xxxxxxxxxxxx xx xxxx xxxxxxxxxxxx.",
+  "lib.field-description-messages.joinServerLocation": "Xxxxxxx xxxx xxxxxxxxxxxx xx xxxxxxxx xx xxxx xxx xx xxxx xxx xxxxxx xx xxx-xxxxxxxxxxx xx xx xxxxxxxx Xxxx Xxxxxx. Xx xxx, xxx xxx xxx xxx xxxxx Xxxx Xxxxxx, xx xxxxxxxxx xxx xxx xxxxxx xx xxx Xxxxxx Xxxx Xxxxxx xx xxxx xxx xxx xxxxxxxx xx xxxxxxx xxxx-xx.",
+  "lib.field-description-messages.joinServerAbsence": "Xx xxx xxx xxxxxx xx xxx-xxxxxxxxxxx, xxx xxxx xxxx xxx xxxx xxxx xxx xxxxxxxxxxxx xx xxxxxxxx xx.",
+  "lib.field-description-messages.devAddrDescription": "X xx xxx xxx-xxxxxx xxxxxxxxxx, xxxxxxxx xx xxx Xxxxxxx Xxxxxx xxxxxx xxx xxxxxx xxxxxxxxxx.",
+  "lib.field-description-messages.devAddrLocation": "Xxx Xxxxxxxxxx-Xx-Xxxxxxxxxxxxxxx (XXX), xxx xxxx xxxxxxxx x xxxxxx xxxxxxx xxx xxxxxxxx xxxxxxx xx xxxx xxx xxx xxxxxx. Xxx xxx xxx xxx xxxxxxxx xxxxxx xxxx xx xxx xxxxx xxxxx xx xxxxxxxx x xxxxxx xxxxxxx.",
+  "lib.field-description-messages.appSKeyDescription": "Xxxxx xxxxxxxxxx, xxxx xxxxxxxxxx xxx xx xxxx xx xxxxxx xxxxxxxx xxxxx xxxxx x xxxxxxx.",
+  "lib.field-description-messages.appSKeyLocation": "Xxx Xxxxxxxxxx-Xx-Xxxxxxxxxxxxxxx (XXX), xxx xxxx xxxxxxxx x xxx xxx xxxxxxxx xxxxxxx xx xxxx xxxx xxx xxxxxx. Xxx xxx xxx xxx xxxxxxxx xxxxxx xxxx xx xxx xxxxx xxxxx xx xxxxxxxx x xxx.",
+  "lib.field-description-messages.nwkSKeyDescription": "Xxxxx xxxxxxxxxx, xxxx xxxxxxxxxx xxx xx xxxx xx xxxxxx xxxxxxxx xxxxx xx xxx xxxxx x xxxxxxx.",
+  "lib.field-description-messages.nwkSKeyLocation": "Xxx XXXX, xx xx xxxxxxx xx xxx Xxxxxxx Xxxxxx. Xx xxxxx XXX, xxx xxxx xxxxxx xxx xxx xxxxxxxx xxxxx xx xx xxx xxx xxxxxx xxx Xxx Xxxxxx Xxxxx.",
+  "lib.field-description-messages.lwVersionDescription": "Xxx XxXx Xxxxxxxx XxXxXXX xxxxxxxxxxxxx xxxx xxx xxxxxx xxxxxxxx xx, xxxxx xxxxxxx xxxxx Xxxxx Xxxxxx Xxxxxxx (XXX) xxxxxxxx xx xxxxxxxx.",
+  "lib.field-description-messages.lwVersionLocation": "Xxx XxXxXXX xxxxxxx xxx xxxx xxx xxxxxx xxxxxx xx xxxxxxxx xx xxx xxxxxxxxxxxx xx x xxxxxxxxx xx XxXxXXX xxxxxxx xx XxXxXXX xxxxxxxxxxxxx",
+  "lib.field-description-messages.lwVersionAbsence": "Xxxxxxx xxxx xxxxxxxxxxxx xx xxxxxxxx, xxxxx xxxxxxxxxx xxx xxxxx xxxxxxx xxx xxxx xx xxxxxxx xxxxxx xxxx xxx Xxxxxxx Xxxxxx xxxxxxxx xxx xxx xxxxxx xxxx xxxxxxxxxxx xxxxxxxxxxxxx (XXX) xxxxxxxx.",
+  "lib.field-description-messages.regParameterDescription": "Xxx Xxxxxxxx Xxxxxxxxxx xxxxxxx xxxxxxxxx, xxxxx xxxx, xxx xxxxx xxxxxxxxxxxxx xxxxxxxx xxx xxxxxxxxx xxxxxxxxxxxx xxxxx. Xxx Xxxxxxxx Xxxxxxxxxx xxxxxxx xx xxx xxxxxxx xx xxx XxXx Xxxxxxxx xxxxxxxxxxxxx xxxxx xxxx xxxxxx xxxxxxxx.",
+  "lib.field-description-messages.regParameterLocation": "Xxx Xxxxxxxx Xxxxxxxxxx xxxxxxx xxxxxx xx xxxxxxxx xx xxx xxx xxxxxx xxxxxxxxxxxx xx x xxxxxxxxx.",
+  "lib.field-description-messages.regParameterAbsence": "Xxxxxxx xxxx xxxxxxxxxxxx xx xxxxxxxx xx xxxxxx xxx xxxxxxx xxxxxxxxxxxxx. Xxxxxxxxxx x xxxxx xxxxxxx xxx xxxx xx xxxxxxx xxxxxx xxxx xxx Xxxxxxx Xxxxxx xxxxxxxx xxx xxx xxxxxx xxxx xxxxxxxxxxx xxxxxxxxxxxxx (XXX) xxxxxxxx.",
+  "lib.field-description-messages.classDescription": "Xxx XxXxXXX xxxxxxxxxxxxx xxxxxxx xxxxx xxx xxxxxx xxxxx. Xxx XxXxXXX xxx xxxxxxx xxxx xxxxxxxxx Xxxxx X, xxxxxxx Xxxxx X xxx Xxxxx X xxx xxxxxxxxxx xx xxx xxxxxxxxxxxxx xx Xxxxx X xxxxxxx xxxx xxxxxxx xxxxxxxxx xxxxxxxx xxxxxxxxx xxxxxxxx.",
+  "lib.field-description-messages.classLocation": "Xxx xxxxx xxxxxxxxxxxx xx xxxx xxx xxxxxx xxxxxx xx xxxxxxxx xx xxx xxxxxxxxxxx xx x xxxxxxxxx.",
+  "lib.field-description-messages.classAbsence": "Xx xxxx xxx xxxxxx xxxx xxx xxxxxxx xxxxxxxx xxxxxxxx, xxx xxx xxxxxx xxx Xxxxx X, xxxxx xxx XxXxXXX xxxxxxxxx xxxxxxx xxxx xxxxxxxxx. Xxxxxxxxx xxxxxxx xxxx xxxxxxxxxxxx xx xxxxxxxx.",
+  "lib.field-description-messages.rx1DataRateOffsetDescription": "Xxx Xxxx Xxxx Xxxxxx xxxx xxx xxxxxx xxxxxxx xxx xxxxxx xxxx xxxx xxx xxx xxxxxxxx xxxx xxxx xxxx xx xxxxxxxxxxx xxxx xxx Xxx Xxxxxx xxxxxx xxx xxxxx xxxxxxxxx xxxx (XXx).",
+  "lib.field-description-messages.dataRateIndexDescription": "Xxx Xxxx Xxxx Xxxxx xxxxxxxxx xxxxx xxxx xxxx xxxxxxxx xxxxxxxxxxxxxx xxxx xxx, xx xxxxx xx xxx Xxxxxxxx Xxxxxxxxxx.",
   "lib.shared-messages.16Bit": "xx xxx",
   "lib.shared-messages.32Bit": "xx xxx",
   "lib.shared-messages.abp": "Xxxxxxxxxx xx xxxxxxxxxxxxxxx (XXX)",
@@ -582,14 +620,11 @@
   "lib.shared-messages.appEUIDescription": "Xxx XxxXXX xxxxxxxx xxxxxxxxxx xxx xxxxx xx xxx xxx xxxxxx. Xx xx XxxXXX xx xxxxxxxx xx xxx xxxxxx xxxxxxxxxxxx (xxxxxxx xxx xxxxxxxxxxx), xx xxx xx xxxxxx xxxx xxxxx.",
   "lib.shared-messages.appId": "Xxxxxxxxxxx XX",
   "lib.shared-messages.appKey": "XxxXxx",
-  "lib.shared-messages.appKeyDescription": "Xxx xxxx xxx xx xxxxxx xxxxxxx xxxx xx xxxxxx xxxxxxxxxxxxx xxxxxxx xxx xxx xxxxxx xxx xxx xxxxxxxxxxx",
-  "lib.shared-messages.appKeyNewDescription": "Xxx xxxx xxx xx xxxxxx xxx xxxxxxxxxxx xxxxxxx xxx xx xxxxxx xxxxxxxxxxxxx xxxxxxx xxx xxx xxxxxx xxx xxx xxxxxxxxxxx",
   "lib.shared-messages.application": "Xxxxxxxxxxx",
   "lib.shared-messages.applications": "Xxxxxxxxxxxx",
   "lib.shared-messages.applicationServerAddress": "Xxxxxxxxxxx Xxxxxx xxxxxxx",
   "lib.shared-messages.approve": "Xxxxxxx",
   "lib.shared-messages.appSKey": "XxxXXxx",
-  "lib.shared-messages.appSKeyDescription": "Xxxxxxxxxxx xxxxxxx xxx",
   "lib.shared-messages.asServerID": "Xxxxxxxxxxx Xxxxxx XX",
   "lib.shared-messages.asServerIDDescription": "Xxx XX-XX xx xxx Xxxxxxxxxxx Xxxxxx xx xxx",
   "lib.shared-messages.asServerKekLabel": "Xxxxxxxxxxx Xxxxxx XXX xxxxx",
@@ -644,11 +679,9 @@
   "lib.shared-messages.devAddr": "Xxxxxx xxxxxxx",
   "lib.shared-messages.devDesc": "Xxx xxxxxx xxxxxxxxxxx",
   "lib.shared-messages.devEUI": "XxxXXX",
-  "lib.shared-messages.deviceAddrDescription": "Xxxxxx xxxxxxx, xxxxxx xx xxx Xxxxxxx Xxxxxx xx xxxxxx xx xxxxxx xxxxxxxxxxxx xx xxxx xx xxxxxxx xxxxx",
   "lib.shared-messages.deviceCounted": "{count, plural, =one {Xxx xxxxxx} other {Xxx xxxxxxx}}",
   "lib.shared-messages.deviceDescDescription": "Xxxxxxxx xxx xxxxxx xxxxxxxxxxx; xxx xxxx xx xxxx xx xxxx xxxxx xxxxx xxx xxx xxxxxx",
   "lib.shared-messages.deviceDescPlaceholder": "Xxxxxxxxxxx xxx xx xxx xxx xxxxxx",
-  "lib.shared-messages.deviceEUIDescription": "Xxx XxxXXX xx xxx xxxxxx xxxxxxxxxx xxx xxxx xxx xxxxxx",
   "lib.shared-messages.deviceIdPlaceholder": "xx-xxx-xxxxxx",
   "lib.shared-messages.deviceNamePlaceholder": "Xx xxx xxx xxxxxx",
   "lib.shared-messages.device": "Xxx xxxxxx",
@@ -684,7 +717,6 @@
   "lib.shared-messages.fetching": "Xxxxxxxx xxxxx",
   "lib.shared-messages.firmwareVersion": "Xxxxxxxx xxxxxxx",
   "lib.shared-messages.fNwkSIntKey": "XXxxXXxxXxx",
-  "lib.shared-messages.fNwkSIntKeyDescription": "Xxxxxxxxxx xxxxxxx xxxxxxx xxxxxxxxx xxx",
   "lib.shared-messages.frameCounterWidth": "Xxxxx xxxxxxx xxxxx",
   "lib.shared-messages.frequencyPlan": "Xxxxxxxxx xxxx",
   "lib.shared-messages.frequencyPlanWarning": "Xxxxxxx xxxxxxxx x xxxxxxxxx xxxx, xxxxxxx xxxx xxx xxxxxxx xxxx xxx xx xxxxxxxxx xxxxxxxxx",
@@ -722,7 +754,6 @@
   "lib.shared-messages.insufficientAppKeyRights": "Xxxxxxxxxxxx xxxxxx xx xxx xx XxxXxx",
   "lib.shared-messages.insufficientNwkKeyRights": "Xxxxxxxxxxxx xxxxxx xx xxx x XxxXxx",
   "lib.shared-messages.joinEUI": "XxxxXXX",
-  "lib.shared-messages.joinEUIDescription": "Xxx XxxxXXX xxxxxxxxxx xxx Xxxx Xxxxxx. Xx xx XxxxXXX xx xxxxxxxx xx xxx xxxxxx xxxxxxxxxxxx (xxxxxxx xxx xxxxxxxxxxx), xx xxx xx xxxxxx xxxx xxxxx.",
   "lib.shared-messages.joinServerAddress": "Xxxx Xxxxxx xxxxxxx",
   "lib.shared-messages.key": "xxx",
   "lib.shared-messages.keyEdit": "Xxxx XXX xxx",
@@ -747,7 +778,6 @@
   "lib.shared-messages.lorawanOptions": "XxXxXXX xxxxxxx",
   "lib.shared-messages.lorawanPhyVersionDescription": "Xxx XxXxXXX XXX xxxxxxx xx xxx xxx xxxxxx",
   "lib.shared-messages.macVersion": "XxXxXXX xxxxxxx",
-  "lib.shared-messages.macVersionDescription": "Xxx XxXxXXX xxxxxxx (XXX), xx xxxxxxxx xx xxx xxxxxx xxxxxxxxxxxx",
   "lib.shared-messages.messaging": "Xxxxxxxxx",
   "lib.shared-messages.messageTypes": "Xxxxxxx xxxxx",
   "lib.shared-messages.milliseconds": "xxxxxxxxxxxx",
@@ -772,11 +802,9 @@
   "lib.shared-messages.nsServerKekLabel": "Xxxxxxx Xxxxxx XXX xxxxx",
   "lib.shared-messages.nsServerKekLabelDescription": "Xxx XXX xxxxx xx xxx Xxxxxxx Xxxxxx xx xxx xxx xxxxxxxx xxx xxxxxxx xxxxxxx xxx",
   "lib.shared-messages.nwkKey": "XxxXxx",
-  "lib.shared-messages.nwkKeyDescription": "Xxx xxxx xxx xx xxxxxx xxxxxxx xxxxxxx xxxx xx xxxxxx xxxxxxxxxxxxx xxxxxxx xxx xxx xxxxxx xxx xxx xxxxxxx",
   "lib.shared-messages.nwkSEncKey": "XxxXXxxXxx",
   "lib.shared-messages.nwkSEncKeyDescription": "Xxxxxxx xxxxxxx xxxxxxxxxx xxx",
   "lib.shared-messages.nwkSKey": "XxxXXxx",
-  "lib.shared-messages.nwkSKeyDescription": "Xxxxxxx xxxxxxx xxx",
   "lib.shared-messages.offline": "Xxxxxxx",
   "lib.shared-messages.ok": "Xx",
   "lib.shared-messages.online": "Xxxxxx",
