console: Expose multiframe configuration

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -319,6 +319,14 @@
   "console.containers.lora-cloud-gls-form.index.tokenDescription": "Geolocation access token as configured within LoRa Cloud",
   "console.containers.lora-cloud-gls-form.index.setLoRaCloudToken": "Set LoRa Cloud token",
   "console.containers.lora-cloud-gls-form.index.deleteWarning": "Are you sure you want to delete the LoRaCloud Geolocation token? This action cannot be undone.",
+  "console.containers.lora-cloud-gls-form.index.queryType": "Query type",
+  "console.containers.lora-cloud-gls-form.index.queryTypeDescription": "What kind of geolocation query should be used",
+  "console.containers.lora-cloud-gls-form.index.multiFrame": "Multiframe",
+  "console.containers.lora-cloud-gls-form.index.multiFrameDescription": "Enable multiframe lookups",
+  "console.containers.lora-cloud-gls-form.index.multiFrameWindowSize": "Multiframe window size",
+  "console.containers.lora-cloud-gls-form.index.multiFrameWindowSizeDescription": "How many historical message to send as part of the request. A window size of 0 automatically determines this based on the first byte of the payload.",
+  "console.containers.lora-cloud-gls-form.index.multiFrameTimeWindow": "Multiframe time window",
+  "console.containers.lora-cloud-gls-form.index.multiFrameTimeWindowDescription": "How recent the historical messages should be, in minutes.",
   "console.containers.owners-select.owners-select.title": "Owner",
   "console.containers.owners-select.owners-select.warning": "There was an error and the list of organizations could not be displayed",
   "console.containers.pubsub-formats-select.index.title": "Pub/Sub format",
