console: Fix state updates

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -322,11 +322,11 @@
   "console.containers.lora-cloud-gls-form.index.queryType": "Query type",
   "console.containers.lora-cloud-gls-form.index.queryTypeDescription": "What kind of geolocation query should be used",
   "console.containers.lora-cloud-gls-form.index.multiFrame": "Multiframe",
-  "console.containers.lora-cloud-gls-form.index.multiFrameDescription": "Enable multiframe lookups",
+  "console.containers.lora-cloud-gls-form.index.multiFrameDescription": "Enable multiframe lookups to improve accuracy",
   "console.containers.lora-cloud-gls-form.index.multiFrameWindowSize": "Multiframe window size",
-  "console.containers.lora-cloud-gls-form.index.multiFrameWindowSizeDescription": "How many historical message to send as part of the request. A window size of 0 automatically determines this based on the first byte of the payload.",
+  "console.containers.lora-cloud-gls-form.index.multiFrameWindowSizeDescription": "How many historical messages to send as part of the request. Using 0 will automatically determine this based on the first byte of the payload",
   "console.containers.lora-cloud-gls-form.index.multiFrameTimeWindow": "Multiframe time window",
-  "console.containers.lora-cloud-gls-form.index.multiFrameTimeWindowDescription": "How recent the historical messages should be, in minutes.",
+  "console.containers.lora-cloud-gls-form.index.multiFrameTimeWindowDescription": "The maximum age of considered historical messages in minutes",
   "console.containers.owners-select.owners-select.title": "Owner",
   "console.containers.owners-select.owners-select.warning": "There was an error and the list of organizations could not be displayed",
   "console.containers.pubsub-formats-select.index.title": "Pub/Sub format",
