--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -322,11 +322,11 @@
   "console.containers.lora-cloud-gls-form.index.queryType": "Xxxxx xxxx",
   "console.containers.lora-cloud-gls-form.index.queryTypeDescription": "Xxxx xxxx xx xxxxxxxxxxx xxxxx xxxxxx xx xxxx",
   "console.containers.lora-cloud-gls-form.index.multiFrame": "Xxxxxxxxxx",
-  "console.containers.lora-cloud-gls-form.index.multiFrameDescription": "Xxxxxx xxxxxxxxxx xxxxxxx",
+  "console.containers.lora-cloud-gls-form.index.multiFrameDescription": "Xxxxxx xxxxxxxxxx xxxxxxx xx xxxxxxx xxxxxxxx",
   "console.containers.lora-cloud-gls-form.index.multiFrameWindowSize": "Xxxxxxxxxx xxxxxx xxxx",
-  "console.containers.lora-cloud-gls-form.index.multiFrameWindowSizeDescription": "Xxx xxxx xxxxxxxxxx xxxxxxx xx xxxx xx xxxx xx xxx xxxxxxx. X xxxxxx xxxx xx x xxxxxxxxxxxxx xxxxxxxxxx xxxx xxxxx xx xxx xxxxx xxxx xx xxx xxxxxxx.",
+  "console.containers.lora-cloud-gls-form.index.multiFrameWindowSizeDescription": "Xxx xxxx xxxxxxxxxx xxxxxxxx xx xxxx xx xxxx xx xxx xxxxxxx. Xxxxx x xxxx xxxxxxxxxxxxx xxxxxxxxx xxxx xxxxx xx xxx xxxxx xxxx xx xxx xxxxxxx",
   "console.containers.lora-cloud-gls-form.index.multiFrameTimeWindow": "Xxxxxxxxxx xxxx xxxxxx",
-  "console.containers.lora-cloud-gls-form.index.multiFrameTimeWindowDescription": "Xxx xxxxxx xxx xxxxxxxxxx xxxxxxxx xxxxxx xx, xx xxxxxxx.",
+  "console.containers.lora-cloud-gls-form.index.multiFrameTimeWindowDescription": "Xxx xxxxxxx xxx xx xxxxxxxxxx xxxxxxxxxx xxxxxxxx xx xxxxxxx",
   "console.containers.owners-select.owners-select.title": "Xxxxx",
   "console.containers.owners-select.owners-select.warning": "Xxxxx xxx xx xxxxx xxx xxx xxxx xx xxxxxxxxxxxxx xxxxx xxx xx xxxxxxxxx",
   "console.containers.pubsub-formats-select.index.title": "Xxx/Xxx xxxxxx",
