console: Fix gateway downlink event display

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -148,6 +148,12 @@
   "console.components.events.messages.sessionKeyId": "Session key ID",
   "console.components.events.messages.selectedMacVersion": "Selected MAC version",
   "console.components.events.messages.rx1Delay": "Rx1 Delay",
+  "console.components.events.messages.rx1DataRateIndex": "Rx1 Data Rate Index",
+  "console.components.events.messages.rx1Frequency": "Rx1 Frequency",
+  "console.components.events.messages.rx2DataRateIndex": "Rx2 Data Rate Index",
+  "console.components.events.messages.rx2Frequency": "Rx2 Frequency",
+  "console.components.events.messages.gatewayEUI": "Gtw EUI",
+  "console.components.events.messages.class": "Class",
   "console.components.events.messages.eventDetails": "Event details",
   "console.components.events.messages.rawEvent": "Raw event",
   "console.components.events.messages.errorOverviewEntry": "There was an error and the event cannot be displayed. The raw event can by viewed by clicking this row.",
