--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -148,6 +148,12 @@
   "console.components.events.messages.sessionKeyId": "Xxxxxxx xxx XX",
   "console.components.events.messages.selectedMacVersion": "Xxxxxxxx XXX xxxxxxx",
   "console.components.events.messages.rx1Delay": "Xxx Xxxxx",
+  "console.components.events.messages.rx1DataRateIndex": "Xxx Xxxx Xxxx Xxxxx",
+  "console.components.events.messages.rx1Frequency": "Xxx Xxxxxxxxx",
+  "console.components.events.messages.rx2DataRateIndex": "Xxx Xxxx Xxxx Xxxxx",
+  "console.components.events.messages.rx2Frequency": "Xxx Xxxxxxxxx",
+  "console.components.events.messages.gatewayEUI": "Xxx XXX",
+  "console.components.events.messages.class": "Xxxxx",
   "console.components.events.messages.eventDetails": "Xxxxx xxxxxxx",
   "console.components.events.messages.rawEvent": "Xxx xxxxx",
   "console.components.events.messages.errorOverviewEntry": "Xxxxx xxx xx xxxxx xxx xxx xxxxx xxxxxx xx xxxxxxxxx. Xxx xxx xxxxx xxx xx xxxxxx xx xxxxxxxx xxxx xxx.",
